@@ -23,6 +23,7 @@ import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import javax.swing.JLabel;
@@ -37,8 +38,8 @@ public final class URLLabel extends JLabel {
     super(text);
 
     try {
-      this.link = new URL(text);
-    } catch (MalformedURLException e) {
+      this.link = (new URI(text)).toURL();
+    } catch (URISyntaxException | MalformedURLException e) {
       throw new LukeException(e.getMessage(), e);
     }
 
